--- a/flaskbook/apps/auth/templates/auth/base.html
+++ b/flaskbook/apps/auth/templates/auth/base.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('crud.static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('auth.static', filename='style.css') }}">
 </head>
 <body>
 <div>
     {% if current_user.is_authenticated %}
-        <p>
-            <span>{{ current_user.username }}</span>
-            <span><a href="{{ url_for('auth.logout') }}">로그아웃</a></span>
-        </p>
+    <p>
+        <span>{{ current_user.username }}</span>
+        <span><a href="{{ url_for('auth.logout') }}">로그아웃</a></span>
+    </p>
     {% endif %}
 </div>
 {% block content %}{% endblock %}
